--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         if (window.navigator.userAgent.toLowerCase().match(/iphone/)) {
           var now = new Date().valueOf();
           setTimeout(function () {
-            if (new Date().valueOf() - now > 100) {
-              alert('Ha! Welcome Back, native app user!');
-            }
-            // window.location = "https://itunes.apple.com/appdir";
+            // if (new Date().valueOf() - now > 100) {
+            //   alert('Ha! Welcome Back, native app user!');
+            // }
+            window.location = "https://itunes.apple.com/appdir";
           }, 25);
 
           window.location = 'ae://page/category/cat4130031';
