check avoid error

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             // if (new Date().valueOf() - now > 100) {
             //   alert('Ha! Welcome Back, native app user!');
             // }
-            window.location = "https://itunes.apple.com/appdir";
-          }, 25);
+            window.location.assign("https://apps.apple.com/us/app/ae-aerie/id467738064");
+          }, 250);
 
           try {
             window.location = 'ae://page/category/cat4130031';
