--- a/5.html
+++ b/5.html
@@ -25,7 +25,7 @@
             //   alert('Ha! Welcome Back, native app user!');
             // }
             window.location.assign(location.href + '?noapp');
-            window.close();
+            // window.close();
           }, 1);
 
           try {
