--- a/10.html
+++ b/10.html
@@ -13,19 +13,19 @@
         let isAndroid = window.navigator.userAgent.toLowerCase().match(/android/);
 
         if (isIphone || isAndroid && !location.search.includes('deepLink')) {
-          // var now = new Date().valueOf();
-          setTimeout(function () {
-            // if (new Date().valueOf() - now > 100) {
-            //   alert('Ha! Welcome Back, native app user!');
-            // }
-
-            window.location.assign(
-              location.href.includes('?') ? location.href + '&deepLink' : location.href + '?deepLink'
-            );
-            // window.location = "https://itunes.apple.com/appdir";
-          }, 25);
-
           if (isIphone) {
+            // var now = new Date().valueOf();
+            setTimeout(function () {
+              // if (new Date().valueOf() - now > 100) {
+              //   alert('Ha! Welcome Back, native app user!');
+              // }
+
+              window.location.assign(
+                location.href.includes('?') ? location.href + '&deepLink' : location.href + '?deepLink'
+              );
+              // window.location = "https://itunes.apple.com/appdir";
+            }, 25);
+
             window.location = 'ae://page/category/cat4130031';
           }
 
@@ -39,8 +39,8 @@
 
               if (relatedApps.some(app => app.platform === 'play')) {
                 alert('Android app is installed!');
-                window.location = 'ae://page/category/cat4130031';
-                // window.location = 'intent://page/category/cat4130031#Intent;scheme=ae;package=com.ae.ae.debug;end';
+                // window.location = 'ae://page/category/cat4130031';
+                window.location = 'intent://page/category/cat4130031#Intent;scheme=ae;package=com.ae.ae.debug;end';
               }
             } catch (e) {
               alert(e);
